--- a/templates/index.html
+++ b/templates/index.html
@@ -66,8 +66,10 @@
         </a>
         </p>
         <p>
-            You win {{ currency }} {{ win_rate }} for every time you choose the product with better value for money.
-            You win {{ currency }} {{ draw_rate }} for every time you choose a product where the value for money is equal to the other product.
+            You earn {{ currency }} {{ win_rate }} for every time you choose the product with better value for money.
+            <br>
+            You earn {{ currency }} {{ draw_rate }} for every time you choose a product where the value for money is equal to the other product.
+            <br>
             You lose {{ currency }} {{ loss_rate }} for every time you choose the product with worse value for money.
         </p>
         <p>Product List is reset daily at 8pm GMT.</p>
