--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
         <p>
           Step 2:
         <a href = '/vote' target="_blank">
-          Vote on products to earn money here.
+          Earn money by voting on products here.
         </a>
         </p>
         <p>
